# prime4api

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test.py
app/: main.py
app/engine/: __init__.py  bounded_rate.py  time_models.py
app/engine/evaluators/: __init__.py  bounded_rate.py  quota_evaluator.py  rate_evaluator.py
app/engine/plotters/: __init__.py  bounded_rate_plotter.py  curve_models.py  quota_plotter.py  rate_plotter.py
app/models/: __init__.py  quota.py  rate.py
app/routers/bounded_rate/: capacity_curves.py
app/routers/datasheet/: __init__.py  capacity_curves.py  datasheet_navigation.py  datasheet_operations.py  evaluate.py
app/schemas/: __init__.py  capacity_curves.py  datasheet.py
app/services/: __init__.py  basic_operations_service.py  capacity_curve_service.py  datasheet_evaluator_service.py
app/utils/: plotly_renderer.py  time_utils.py  yaml_utils.py
file_helpers/: compare_curves.py  test_curves.py
